fix navbar toggle button on small screens

--- a/src/app/menubar/menubar.component.scss
+++ b/src/app/menubar/menubar.component.scss
@@ -11,3 +11,7 @@ nav {
 .btn-warning {
   color: rgba(37, 2, 2, 0.815) !important;
 }
+
+.navbar-toggler-icon {
+  background-image: none;
+}
